# hacker-news-scraper

./: .gitignore  README.md  hello.py  pyproject.toml
scraper/: config.py  main.py  mongo_db.py  scraper.py
tests/: conftest.py
tests/fixtures/: index.html
tests/unit/: test_scraper.py
