[project]
name = "hacker-news-scraper"
version = "0.1.0"
description = "HackerNews scraper for specific keywords"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "flask>=3.1.0",
    "pydantic>=2.10.6",
    "pymongo>=4.10.1",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]
